products page link

--- a/TwoWheeler.html
+++ b/TwoWheeler.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ecomax | Products</title>
+    <title>Ecomax | Products |  Two Wheeler Engine Oil</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -122,26 +122,22 @@
             <div class="row">
                 <div class="d-flex Lubricants flex-column p-0">
                     <h2 class="text-center Lubricants-title">
-                        Ecomax Lubricants: Tailored Solutions for Every Engine
+                        Two-Wheeler Engine Oil
                     </h2>
-                    <p class="text-center Lubricants-text">Powering Diverse Industries: Ecomax, your comprehensive
-                        provider of lubricant excellence. From automobiles to industrial machinery, our versatile range
-                        of lubricants is engineered to optimize performance across a spectrum of applications.
-                        Experience the difference with Ecomax, where precision meets versatility for engines of all
-                        types, ensuring smooth operation and prolonged endurance, every time.</p>
+                    <p class="text-center Lubricants-text">Revitalize Your Ride: Ecomax Two-Wheeler Engine Oil, the ultimate companion for your motorcycle or scooter. Crafted with precision and tailored for performance, our range of lubricants is designed to elevate your two-wheeled experience. Whether you're cruising through city streets or conquering rugged terrains, trust Ecomax to deliver unmatched smoothness and durability for your engine. Embrace the journey with confidence, knowing that Ecomax has your ride covered, mile after exhilarating mile.</p>
                 </div>
                 <div class="col-12 d-flex flex-wrap p-0 justify-content-center Lubricants-products">
                     <div class="products">
-                        <a href="TwoWheeler.html">
+                        <a href="#">
                             <div class="products-img">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/products1.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/wheeler1.png"
                                     alt="products" class="img-fluid">
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
 
                                     <h5>
-                                        Two Wheeler Engine Oil
+                                        Max 4T 20W-40
                                     </h5>
                                     <h5 class="products-icon">
                                         <i class="fa-solid fa-arrow-right"></i>
@@ -153,14 +149,14 @@
                     <div class="products">
                         <a href="#">
                             <div class="products-img">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/products2.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/wheeler2.png"
                                     alt="products" class="img-fluid">
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
 
                                     <h5>
-                                        Synthetic Two Wheeler Engine Oil
+                                        Action 20W-40 4T
                                     </h5>
                                     <h5 class="products-icon">
                                         <i class="fa-solid fa-arrow-right"></i>
@@ -172,14 +168,14 @@
                     <div class="products">
                         <a href="#">
                             <div class="products-img">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/products3.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/wheeler3.png"
                                     alt="products" class="img-fluid">
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
 
                                     <h5>
-                                        Synthetic Car Engine Oil
+                                        4T power plus 20W-40
                                     </h5>
                                     <h5 class="products-icon">
                                         <i class="fa-solid fa-arrow-right"></i>
@@ -191,14 +187,14 @@
                     <div class="products">
                         <a href="#">
                             <div class="products-img">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/products4.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/wheeler4.png"
                                     alt="products" class="img-fluid">
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
 
                                     <h5>
-                                        Premium Engine Oil
+                                        Gold 4T 20W-40
                                     </h5>
                                     <h5 class="products-icon">
                                         <i class="fa-solid fa-arrow-right"></i>
@@ -210,14 +206,14 @@
                     <div class="products">
                         <a href="#">
                             <div class="products-img">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/products5.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/wheeler5.png"
                                     alt="products" class="img-fluid">
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
 
                                     <h5>
-                                        Tractor Engine Oil
+                                        Max 4T 20W-50
                                     </h5>
                                     <h5 class="products-icon">
                                         <i class="fa-solid fa-arrow-right"></i>
@@ -229,109 +225,14 @@
                     <div class="products">
                         <a href="#">
                             <div class="products-img">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/products6.png"
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/wheeler6.png"
                                     alt="products" class="img-fluid">
                             </div>
                             <div class="products-title">
                                 <div class="d-flex justify-content-between">
 
                                     <h5>
-                                        CNG Engine Oil
-                                    </h5>
-                                    <h5 class="products-icon">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="products">
-                        <a href="#">
-                            <div class="products-img">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/products7.png"
-                                    alt="products" class="img-fluid">
-                            </div>
-                            <div class="products-title">
-                                <div class="d-flex justify-content-between">
-
-                                    <h5>
-                                        Hydraulic Oil
-                                    </h5>
-                                    <h5 class="products-icon">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="products">
-                        <a href="#">
-                            <div class="products-img">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/products8.png"
-                                    alt="products" class="img-fluid">
-                            </div>
-                            <div class="products-title">
-                                <div class="d-flex justify-content-between">
-
-                                    <h5>
-                                        Gear Oil
-                                    </h5>
-                                    <h5 class="products-icon">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="products">
-                        <a href="#">
-                            <div class="products-img">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/products9.png"
-                                    alt="products" class="img-fluid">
-                            </div>
-                            <div class="products-title">
-                                <div class="d-flex justify-content-between">
-
-                                    <h5>
-                                        Heavy Duty Coolant
-                                    </h5>
-                                    <h5 class="products-icon">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="products">
-                        <a href="#">
-                            <div class="products-img">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/products10.png"
-                                    alt="products" class="img-fluid">
-                            </div>
-                            <div class="products-title">
-                                <div class="d-flex justify-content-between">
-
-                                    <h5>
-                                        Brake Fluid & Fork Oil
-                                    </h5>
-                                    <h5 class="products-icon">
-                                        <i class="fa-solid fa-arrow-right"></i>
-                                    </h5>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="products">
-                        <a href="#">
-                            <div class="products-img">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/products/products11.png"
-                                    alt="products" class="img-fluid">
-                            </div>
-                            <div class="products-title">
-                                <div class="d-flex justify-content-between">
-
-                                    <h5>
-                                        Premium Oil
+                                        Max 4T 10W-30
                                     </h5>
                                     <h5 class="products-icon">
                                         <i class="fa-solid fa-arrow-right"></i>
