--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="row">
                 <div class="p-0 d-flex align-items-center justify-content-between">
                     <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-                        <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo1.png" alt="images"
+                        <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/ELogo.png" alt="images"
                                 class="img-fluid"></a>
                     </div>
                     <div class="nav   d-none d-lg-block d-flex justify-content-end">
@@ -65,7 +65,7 @@
                                 <a href="/" class="text-success">HOME</a>
                             </li>
                             <li>
-                                <a href="products.html">PRODUCTS</a>
+                                <a href="collections/index.html">PRODUCTS</a>
                             </li>
 
                             <li>
@@ -92,7 +92,7 @@
                             <div class="offcanvas-header">
                                 <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
                                     <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-                                        <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo1.png" alt="images"
+                                        <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/ELogo.png" alt="images"
                                                 class="img-fluid"></a>
                                     </div>
                                 </h5>
@@ -756,7 +756,7 @@
                                         <a href="/" class="link-light text-decoration-none text-success1">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="products.html" class="link-light text-decoration-none">Product</a>
+                                        <a href="collections/index.html" class="link-light text-decoration-none">Product</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Brochure</a>
