--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
   <title>Ecomax | Contact Us</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="https://ik.imagekit.io/ecomax/assets/css/style.css">
   <!-- Font Awesome Icon Link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -38,7 +38,7 @@
       <div class="row">
         <div class="p-0 d-flex align-items-center justify-content-between">
           <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-            <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo1.png" alt="images"
+            <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/ELogo.png" alt="images"
                 class="img-fluid"></a>
           </div>
           <div class="nav   d-none d-lg-block d-flex justify-content-end">
@@ -74,7 +74,7 @@
               <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="offcanvasScrollingLabel">
                   <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
-                    <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/logo1.png" alt="images"
+                    <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/ELogo.png" alt="images"
                         class="img-fluid"></a>
                   </div>
                 </h5>
