All collections All products complit

--- a/career.html
+++ b/career.html
@@ -48,7 +48,7 @@
                           <a href="/">HOME</a>
                       </li>
                       <li>
-                          <a href="products.html">PRODUCTS</a>
+                          <a href="collections/index.html">PRODUCTS</a>
                       </li>
 
                       <li>
@@ -88,7 +88,7 @@
                                   <a href="/" >HOME</a>
                               </li>
                               <li class="m-2">
-                                  <a href="products.html">PRODUCTS</a>
+                                  <a href="collections/index.html">PRODUCTS</a>
                               </li>
   
                               <li class="m-2">
@@ -269,7 +269,7 @@
                                         <a href="/" class="link-light text-decoration-none ">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="products.html" class="link-light text-decoration-none">Product</a>
+                                        <a href="collections/index.html" class="link-light text-decoration-none">Product</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -301,7 +301,7 @@
                                                     class="link-light text-decoration-none ">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="products.html" class="link-light text-decoration-none">Product</a>
+                                                <a href="collections/index.html" class="link-light text-decoration-none">Product</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Brochure</a>
