--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                                 <a href="/">HOME</a>
                             </li>
                             <li>
-                                <a href="products.html">PRODUCTS</a>
+                                <a href="collections/index.html">PRODUCTS</a>
                             </li>
 
                             <li>
@@ -90,7 +90,7 @@
                                         <a href="/" class="text-success">HOME</a>
                                     </li>
                                     <li class="m-2">
-                                        <a href="products.html">PRODUCTS</a>
+                                        <a href="collections/index.html">PRODUCTS</a>
                                     </li>
 
                                     <li class="m-2">
@@ -552,7 +552,7 @@
                                         <a href="/" class="link-light text-decoration-none ">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="products.html" class="link-light text-decoration-none">Product</a>
+                                        <a href="collections/index.html" class="link-light text-decoration-none">Product</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -583,7 +583,7 @@
                                                 <a href="/" class="link-light text-decoration-none ">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="products.html"
+                                                <a href="collections/index.html"
                                                     class="link-light text-decoration-none">Product</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
