--- a/contactus.html
+++ b/contactus.html
@@ -47,7 +47,7 @@
                 <a href="/">HOME</a>
               </li>
               <li>
-                <a href="products.html">PRODUCTS</a>
+                <a href="collections/index.html">PRODUCTS</a>
               </li>
 
               <li>
@@ -86,7 +86,7 @@
                     <a href="/">HOME</a>
                   </li>
                   <li class="m-2">
-                    <a href="products.html">PRODUCTS</a>
+                    <a href="collections/index.html">PRODUCTS</a>
                   </li>
 
                   <li class="m-2">
@@ -278,7 +278,7 @@
                     <a href="/" class="link-light text-decoration-none ">Home</a>
                   </li>
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                    <a href="products.html" class="link-light text-decoration-none">Product</a>
+                    <a href="collections/index.html" class="link-light text-decoration-none">Product</a>
                   </li>
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                     <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -307,7 +307,7 @@
                         <a href="/" class="link-light text-decoration-none ">Home</a>
                       </li>
                       <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                        <a href="products.html" class="link-light text-decoration-none">Product</a>
+                        <a href="collections/index.html" class="link-light text-decoration-none">Product</a>
                       </li>
                       <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                         <a href="#" class="link-light text-decoration-none">Brochure</a>
