--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                         <a href="/" class="text-success">HOME</a>
                                     </li>
                                     <li class="m-2">
-                                        <a href="products.html">PRODUCTS</a>
+                                        <a href="collections/index.html">PRODUCTS</a>
                                     </li>
         
                                     <li class="m-2">
@@ -788,7 +788,7 @@
                                                     class="link-light text-decoration-none text-success1">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="products.html" class="link-light text-decoration-none">Product</a>
+                                                <a href="collections/index.html" class="link-light text-decoration-none">Product</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Brochure</a>
