--- a/collections/index.html
+++ b/collections/index.html
@@ -364,7 +364,7 @@
                 `
                 <div class="products">
                         <a href="${url}">
-                            <div class="products-img"">
+                            <div class="products-img">
                                 <img src="${img}"
                                     alt="${title}" class="img-fluid col-12">
                             </div>
