--- a/products/index.html
+++ b/products/index.html
@@ -739,7 +739,7 @@
                             ) : collectionData.products.map(function (product) {
                                 product.url = getThumbURL(collectionType, product.slug);
                                 product.img = getAssetURL("/assets/images/collections/" + collectionData.collection_slug + "/products/" + product.images[0]);
-                                product.title = product.title;
+                                product.title = product.thumb_title;
                                 return collectionThumbHTML(product)
                               
                             })
@@ -754,6 +754,7 @@
 
 
         <!-- Script end -->
+
 </body>
 
 </html>
