--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                         <a href="/" class="text-success">HOME</a>
                                     </li>
                                     <li class="m-2">
-                                        <a href="collections/index.html">PRODUCTS</a>
+                                        <a href="/collections">PRODUCTS</a>
                                     </li>
         
                                     <li class="m-2">
