--- a/contactus.html
+++ b/contactus.html
@@ -47,7 +47,7 @@
                 <a href="/">HOME</a>
               </li>
               <li>
-                <a href="collections/index.html">PRODUCTS</a>
+                <a href="collections/">PRODUCTS</a>
               </li>
 
               <li>
@@ -86,7 +86,7 @@
                     <a href="/">HOME</a>
                   </li>
                   <li class="m-2">
-                    <a href="collections/index.html">PRODUCTS</a>
+                    <a href="collections/">PRODUCTS</a>
                   </li>
 
                   <li class="m-2">
@@ -137,7 +137,7 @@
       <div class="contact_detail_container">
         <div class="row gap-3 justify-content-center ">
           <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
-            <div class="d-flex gap-sm-4 gap-3">
+            <div class="d-flex gap-sm-4 contact_card_demo  gap-3">
               <div class="icon_container">
                 <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Mail.png" alt="mail">
               </div>
@@ -278,7 +278,7 @@
                     <a href="/" class="link-light text-decoration-none ">Home</a>
                   </li>
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                    <a href="collections/index.html" class="link-light text-decoration-none">Product</a>
+                    <a href="collections/" class="link-light text-decoration-none">Products</a>
                   </li>
                   <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                     <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -307,7 +307,7 @@
                         <a href="/" class="link-light text-decoration-none ">Home</a>
                       </li>
                       <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                        <a href="collections/index.html" class="link-light text-decoration-none">Product</a>
+                        <a href="collections/" class="link-light text-decoration-none">Products</a>
                       </li>
                       <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                         <a href="#" class="link-light text-decoration-none">Brochure</a>
