--- a/collections/index.html
+++ b/collections/index.html
@@ -55,7 +55,7 @@
                                 <a href="/">HOME</a>
                             </li>
                             <li>
-                                <a href="/collections/index.html" class="text-success">PRODUCTS</a>
+                                <a href="/collections/" class="text-success">PRODUCTS</a>
                               
                             </li>
 
@@ -97,7 +97,7 @@
                                         <a href="/">HOME</a>
                                     </li>
                                     <li class="m-2">
-                                        <a href="/collections/index.html" class="text-success">PRODUCTS</a>
+                                        <a href="/collections/" class="text-success">PRODUCTS</a>
                                     </li>
 
                                     <li class="m-2">
@@ -175,8 +175,8 @@
                                         <a href="/" class="link-light text-decoration-none ">Home</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
-                                        <a href="/collections/index.html"
-                                            class="link-light text-decoration-none text-success1">Product</a>
+                                        <a href="/collections/"
+                                            class="link-light text-decoration-none text-success1">Products</a>
                                     </li>
                                     <li class="list-group-item bg-transparent border-0 p-0 mb-2">
                                         <a href="#" class="link-light text-decoration-none">Brochure</a>
@@ -206,8 +206,8 @@
                                                 <a href="/" class="link-light text-decoration-none ">Home</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
-                                                <a href="/collections/index.html"
-                                                    class="link-light text-decoration-none text-success1">Product</a>
+                                                <a href="/collections/"
+                                                    class="link-light text-decoration-none text-success1">Products</a>
                                             </li>
                                             <li class="list-group-item bg-transparent border-0 p-0 mt-2 mb-2 ms-4">
                                                 <a href="#" class="link-light text-decoration-none">Brochure</a>
