--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
                     <div class="col-12 col-xl-6 d-flex flex-column benefit-text ">
                         <div class="d-flex">
                             <div class="bordericon1 d-flex justify-content-center align-items-center ">
-                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle 588.png" alt="">
+                                <img src="https://ik.imagekit.io/ecomax/assets/images/home/Rectangle 588.png"/>
 
                             </div>
                             <p class=" text-white">Ecomax Product Features</p>
