--- a/career.html
+++ b/career.html
@@ -151,7 +151,7 @@
                 <div
                   class='file-input d-flex align-items-center justify-content-between position-relative border rounded-1'>
                   <input type='file' class="position-absolute top-0 bottom-0 start-0 end-0 opacity-0">
-                  <span style="color:  #8A8A8A;" class='label' data-js-label>Resume</span>
+                  <span  class='label' data-js-label>Resume</span>
                   <span class='button'>Browse</span>
                 </div>
               </div>
@@ -197,7 +197,7 @@
         </h2>
       </div>
       <div class="row justify-content-center  ">
-        <div class=" col-xl-3 col-lg-4 col-sm-6 col-12 wcu_card mt-3 mt-sm-0    ">
+        <div class=" Choose-card col-xl-3 col-lg-4 col-sm-6 col-12 wcu_card mt-3 mt-sm-0    ">
           <div class="wcu-card-container text-center rounded-3">
             <h3 class="h4 wcu-card-heading mb-3 ">Culture of Excellence</h3>
             <p class="m-0 ">We foster a culture of continuous improvement and excellence in everything we do. Joining
@@ -205,24 +205,24 @@
               top-quality products and services.</p>
           </div>
         </div>
-        <div class="col-xl-3 col-lg-4 col-sm-6 col-12 wcu_card mt-3 mt-sm-0  ">
-          <div class="wcu-card-container text-center rounded-3 ">
+        <div class="col-xl-3  col-lg-4 col-sm-6 col-12 wcu_card mt-3 mt-sm-0  ">
+          <div class="wcu-card-container Choose-card text-center rounded-3 ">
             <h3 class="h4 wcu-card-heading mb-3 ">Opportunities for Growth</h3>
             <p class="m-0 ">We believe in investing in our people and providing opportunities for professional and
               personal growth. Whether you're just starting your career or looking to take the next step, Ecomax offers
               a range of opportunities for development and advancement.</p>
           </div>
         </div>
-        <div class="col-xl-3 col-lg-4 col-sm-6 col-12 wcu_card mt-3 mt-sm-4 mt-lg-0  mt-xl-0 ">
-          <div class="wcu-card-container text-center rounded-3 ">
+        <div class="col-xl-3  col-lg-4 col-sm-6 col-12 wcu_card mt-3 mt-sm-4 mt-lg-0  mt-xl-0 ">
+          <div class="wcu-card-container Choose-card text-center rounded-3 ">
             <h3 class="h4 wcu-card-heading mb-3 ">Commitment to Sustainability</h3>
             <p class="m-0 ">Sustainability is at the core of everything we do. By joining Ecomax, you'll be part of a
               company that is committed to reducing its environmental footprint, promoting responsible practices, and
               making a positive impact on the world.</p>
           </div>
         </div>
-        <div class="col-xl-3 col-lg-4 col-sm-6 col-12 wcu_card mt-3 mt-sm-4 mt-lg-4 mt-xl-0 ">
-          <div class="wcu-card-container text-center rounded-3">
+        <div class="col-xl-3  col-lg-4 col-sm-6 col-12 wcu_card mt-3 mt-sm-4 mt-lg-4 mt-xl-0 ">
+          <div class="wcu-card-container Choose-card text-center rounded-3">
             <h3 class="h4 wcu-card-heading mb-3 ">Collaborative Environment</h3>
             <p class="m-0 ">At Ecomax, we believe in the power of collaboration. We value teamwork, open communication,
               and diversity of thought. When you join our team, you'll be working alongside talented individuals from
