--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
   <title>Ecomax | Contact Us</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://ik.imagekit.io/ecomax/assets/css/style.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
   <!-- Font Awesome Icon Link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -136,8 +136,8 @@
       </div>
       <div class="contact_detail_container">
         <div class="row gap-3 justify-content-center ">
-          <div class="col-xl-4 col-6 contact_card d-flex align-items-center bg-white rounded-3">
-            <div class="d-flex gap-sm-4 contact_card_demo  gap-3">
+          <div class="col-xl-4 col-6 contact_card  d-flex align-items-center bg-white rounded-3">
+            <div class="d-flex gap-sm-4   gap-3">
               <div class="icon_container">
                 <img src="https://ik.imagekit.io/ecomax/assets/images/icons/Mail.png" alt="mail">
               </div>
