inlaine css fix

--- a/index.html
+++ b/index.html
@@ -148,31 +148,31 @@
                                 class="carousel-item active  hero-images hero-xs-image hero-sm-image  hero-md-image  hero-lg-image hero-xl-image">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero.png"
                                     class="d-block img-fluid d-none  d-lg-block imagexxl" alt="images"
-                                    style="width: 100%;">
+                                  width="100%">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/4aaad017295fca31b48000780707993c.png"
-                                    class=" img-fluid    d-lg-none" alt="images" style="width: 100%;">
+                                    class=" img-fluid    d-lg-none" alt="images" width="100%">
                             </div>
                             <div
                                 class="carousel-item  hero-xs-image hero-sm-image hero-md-image  hero-lg-image hero-xl-image">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/hero2.png"
-                                    class="d-block img-fluid" alt="images" style="width: 100%;">
+                                    class="d-block img-fluid" alt="images" width="100%">
                             </div>
                             <div
                                 class="carousel-item  hero-xs-image hero-sm-image  hero-md-image  hero-lg-image hero-xl-image">
                                 <img src="https://ik.imagekit.io/ecomax/assets/images/home/10b4287b734f6cb1ed66729e06a32418.png"
-                                    class="d-block img-fluid" alt="images" style="width: 100%;">
+                                    class="d-block img-fluid" alt="images" width="100%">
                             </div>
                         </div>
                         <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleIndicators"
                             data-bs-slide="prev">
-                            <span class="slaid-btn d-none d-md-block" style="line-height: 43px;
-                     "><i class="fa-solid fa-angle-left"></i></span>
+                            <span class="slaid-btn d-none d-md-block next_previous" 
+                     ><i class="fa-solid fa-angle-left"></i></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
                         <button class="carousel-control-next " type="button" data-bs-target="#carouselExampleIndicators"
                             data-bs-slide="next">
-                            <span class="slaid-btn d-none d-md-block" style="line-height: 43px;
-                   "> <i class="fa-solid fa-angle-right"></i></span>
+                            <span class="slaid-btn d-none d-md-block next_previous" 
+                   > <i class="fa-solid fa-angle-right"></i></span>
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
@@ -205,7 +205,7 @@
                             <h1>Welcome To Ecomax – Where Every Drop Counts!</h1>
                         </div>
                         <div class="About-des">
-                            <p style="border-bottom: 1px solid  #F5F5F5; padding-bottom: 20px;">At Ecomax, we're not
+                            <p class="About-des_text" >At Ecomax, we're not
                                 just about lubricant oils; we're about empowering industries,
                                 driving sustainability and building lasting relationships. With over 10 years of
                                 experience under our belt, we've honed our craft, perfected our products and
@@ -463,10 +463,10 @@
                                 <div class="card Revitalize-card ">
                                     <div class="card1 col-12 justify-content-center d-flex">
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize1.png"
-                                            class="card-img-top" alt="images" height="300px" style="width: 69%;">
+                                            class="card-img-top" alt="images" height="300px" width="69%">
                                     </div>
                                     <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center"
-                                        style="height: 90px;">
+                                       >
                                         <p class="card-text text-center">2T POWER JASO FC</p>
                                     </div>
                                 </div>
@@ -475,10 +475,10 @@
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize2.png"
-                                            class="card-img-top" alt="images" height="300px" style="width: 69%;">
+                                            class="card-img-top" alt="images" height="300px" width="69%">
                                     </div>
                                     <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center"
-                                        style="height: 90px;">
+                                        >
                                         <p class="card-text text-center">EURUTEC 5W30 API CI-4 FULLY SYNTHETIC</p>
                                     </div>
                                 </div>
@@ -487,10 +487,10 @@
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize3.png"
-                                            class="card-img-top" alt="images" height="300px" style="width: 69%;">
+                                            class="card-img-top" alt="images" height="300px" width="69%">
                                     </div>
                                     <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center"
-                                        style="height: 90px;">
+                                      >
                                         <p class="card-text text-center">MAX 4T API SL 20W-40</p>
                                     </div>
                                 </div>
@@ -499,10 +499,10 @@
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize4.png"
-                                            class="card-img-top" alt="images" height="300px" style="width: 69%;">
+                                            class="card-img-top" alt="images" height="300px" width="69%">
                                     </div>
                                     <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center"
-                                        style="height: 90px;">
+                                       >
                                         <p class="card-text text-center">GAS ENGINE OIL API SF 20W 50</p>
                                     </div>
                                 </div>
@@ -511,10 +511,10 @@
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize5.png"
-                                            class="card-img-top" alt="images" height="300px" style="width: 69%;">
+                                            class="card-img-top" alt="images" height="300px" width="69%">
                                     </div>
                                     <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center"
-                                        style="height: 90px;">
+                                      >
                                         <p class="card-text text-center">GEAR CARE SAE 140 API GL-4</p>
                                     </div>
                                 </div>
@@ -523,10 +523,10 @@
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize6.png"
-                                            class="card-img-top" alt="images" height="300px" style="width: 69%;">
+                                            class="card-img-top" alt="images" height="300px" width="69%">
                                     </div>
                                     <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center"
-                                        style="height: 90px;">
+                                        >
                                         <p class="card-text text-center">UTTO OIL WET BRAKE OIL</p>
                                     </div>
                                 </div>
@@ -535,10 +535,10 @@
                                 <div class="card Revitalize-card">
                                     <div class="card1 col-12 justify-content-center d-flex">
                                         <img src="https://ik.imagekit.io/ecomax/assets/images/home/Revitalize7.png"
-                                            class="card-img-top" alt="images" height="300px" style="width: 69%;">
+                                            class="card-img-top" alt="images" height="300px" width="69%">
                                     </div>
                                     <div class="card-body revitalize-card-body d-flex justify-content-center align-items-center"
-                                        style="height: 90px;">
+                                       >
                                         <p class="card-text text-center">TUF LUBE SAE 20W40 API CH-4</p>
                                     </div>
                                 </div>
