--- a/index.html
+++ b/index.html
@@ -8,31 +8,31 @@
     <title>Ecomax</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"/>
     <!-- swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
     <!-- Poppins Font -->
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
+        rel="stylesheet"/>
     <!-- font-awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css"/>
     <!-- main css -->
 
 
     <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css"/>
 
-    <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Favicon icon - Ecomax (1).png">
+    <link rel="icon" href="https://ik.imagekit.io/ecomax/assets/images/home/Favicon icon - Ecomax (1).png"/>
 
 
 </head>
@@ -57,7 +57,7 @@
                 <div class="p-0 d-flex align-items-center justify-content-between">
                     <div class="logo logo-xs logo-sm logo-md logo-lg logo-xl">
                         <a href="/"> <img src="https://ik.imagekit.io/ecomax/assets/images/home/ELogo.png" alt="images"
-                                class="img-fluid"></a>
+                                class="img-fluid"/></a>
                     </div>
                     <div class="nav   d-none d-lg-block d-flex justify-content-end">
                         <ul class="d-flex p-0 mb-0 justify-content-end header-nav">
